Shipping rates, input form as table - fixed issues with merged field value, validation, horizontal scrollbar.

--- a/public/stylesheet/backend/DeliveryZone.css
+++ b/public/stylesheet/backend/DeliveryZone.css
@@ -224,3 +224,14 @@ li.testAdress a
 {
 	display:none !important;
 }
+.ratesTableContainerScroll
+{
+	overflow:auto;
+	overflow-x:auto;
+	// width:600px;
+}
+
+.fixedHeader
+{
+	height:39px;
+}
